// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devices/components/deviceIdentityCommandBar snapshot matches snapshot 1`] = `
<StyledCommandBarBase
  items={
    Array [
      Object {
        "ariaLabel": "deviceIdentity.commands.save",
        "disabled": undefined,
        "iconProps": Object {
          "iconName": "Save",
        },
        "key": "Save",
        "name": "deviceIdentity.commands.save",
        "onClick": undefined,
      },
      Object {
        "ariaLabel": "deviceIdentity.commands.manageKeys.ariaLabel",
        "disabled": true,
        "iconProps": Object {
          "iconName": "Permissions",
        },
        "key": "manageKeys",
        "name": "deviceIdentity.commands.manageKeys.label",
        "subMenuProps": Object {
          "items": Array [
            Object {
              "ariaLabel": "deviceIdentity.commands.regeneratePrimary.ariaLabel",
              "disabled": true,
              "iconProps": Object {
                "iconName": "AzureKeyVault",
              },
              "key": "regeneratePrimary",
              "name": "deviceIdentity.commands.regeneratePrimary.label",
              "onClick": undefined,
            },
            Object {
              "ariaLabel": "deviceIdentity.commands.regenerateSecondary.ariaLabel",
              "disabled": true,
              "iconProps": Object {
                "iconName": "AzureKeyVault",
              },
              "key": "regenerateSecondary",
              "name": "deviceIdentity.commands.regenerateSecondary.label",
              "onClick": undefined,
            },
            Object {
              "ariaLabel": "deviceIdentity.commands.swapKeys.ariaLabel",
              "disabled": true,
              "iconProps": Object {
                "iconName": "SwitcherStartEnd",
              },
              "key": "swapKeys",
              "name": "deviceIdentity.commands.swapKeys.label",
              "onClick": undefined,
            },
          ],
        },
      },
    ]
  }
/>
`;

exports[`devices/components/deviceIdentityCommandBar snapshot matches snapshot with disabled save 1`] = `
<StyledCommandBarBase
  items={
    Array [
      Object {
        "ariaLabel": "deviceIdentity.commands.save",
        "disabled": true,
        "iconProps": Object {
          "iconName": "Save",
        },
        "key": "Save",
        "name": "deviceIdentity.commands.save",
        "onClick": undefined,
      },
      Object {
        "ariaLabel": "deviceIdentity.commands.manageKeys.ariaLabel",
        "disabled": true,
        "iconProps": Object {
          "iconName": "Permissions",
        },
        "key": "manageKeys",
        "name": "deviceIdentity.commands.manageKeys.label",
        "subMenuProps": Object {
          "items": Array [
            Object {
              "ariaLabel": "deviceIdentity.commands.regeneratePrimary.ariaLabel",
              "disabled": true,
              "iconProps": Object {
                "iconName": "AzureKeyVault",
              },
              "key": "regeneratePrimary",
              "name": "deviceIdentity.commands.regeneratePrimary.label",
              "onClick": undefined,
            },
            Object {
              "ariaLabel": "deviceIdentity.commands.regenerateSecondary.ariaLabel",
              "disabled": true,
              "iconProps": Object {
                "iconName": "AzureKeyVault",
              },
              "key": "regenerateSecondary",
              "name": "deviceIdentity.commands.regenerateSecondary.label",
              "onClick": undefined,
            },
            Object {
              "ariaLabel": "deviceIdentity.commands.swapKeys.ariaLabel",
              "disabled": true,
              "iconProps": Object {
                "iconName": "SwitcherStartEnd",
              },
              "key": "swapKeys",
              "name": "deviceIdentity.commands.swapKeys.label",
              "onClick": undefined,
            },
          ],
        },
      },
    ]
  }
/>
`;
